# src/main/java/vvu/centrauthz/domains/applications/models/Application.java
@@ -1,9 +1,11 @@
 package vvu.centrauthz.domains.applications.models;
 
+
 import jakarta.validation.constraints.NotBlank;
 import jakarta.validation.constraints.NotNull;
 import lombok.Builder;
-import org.hibernate.validator.constraints.UUID;
+
+import java.util.UUID;
 
 /**
  * Application record representing the main application entity.
@@ -22,20 +24,16 @@ public record Application(
         String description,
 
         @NotNull
-        @UUID
-        String ownerId,
+        UUID ownerId,
 
-        @UUID
-        String managementGroupId,
+        UUID managementGroupId,
 
         Long createdAt,
 
-        @UUID
-        String createdBy,
+        UUID createdBy,
 
         Long updatedAt,
 
-        @UUID
-        String updatedBy
+        UUID updatedBy
 ) {
 }
