# src/main/java/vvu/centrauthz/domains/applications/models/ApplicationFilter.java
@@ -1,10 +1,14 @@
 package vvu.centrauthz.domains.applications.models;
 
+import java.util.UUID;
+
 import lombok.Builder;
 
 @Builder(toBuilder = true)
-public record ApplicationFilter(String nextToken) {
-    public static ApplicationFilter empty() {
-        return ApplicationFilter.builder().build();
-    }
+public record ApplicationFilter(
+    Integer pageSize,
+    String pageToken,    
+    UUID ownerId,
+    UUID managementGroupId,
+    String name) {
 }
